src/objects/Building__c.object
<CustomObject>
    <fields>
        <fullName>Building_Id__c</fullName>
        <externalId>true</externalId>
        <label>Building Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Building_Phone_Number__c</fullName>
        <label>Building Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Division_Name__c</fullName>
        <label>Division Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inspector_Name__c</fullName>
        <label>Inspector Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inspector_Phone_Number__c</fullName>
        <label>Inspector Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>MUSW__Project2__c</referenceTo>
        <relationshipLabel>Building</relationshipLabel>
        <relationshipName>Building</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <description>Release</description>
        <label>Release</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Id__c</fullName>
        <description>Site Id</description>
        <label>Site Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Building</label>
    <nameField>
        <label>Building Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Building</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>